--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,21 @@
               tools:context=".MainActivity"
     >
 
+    <FrameLayout android:id="@+id/login_panel"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 tools:context="com.pij.crowdmix.LoginFragment"
+        >
+
+        <com.twitter.sdk.android.core.identity.TwitterLoginButton
+            android:id="@+id/login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            />
+
+    </FrameLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
