List of Tweet now uses the info from the logged in user. Minor test refactor (some don't work because of login info context kept between tests) :( Transferred handling of refresh to the list fragment. Tweets now loaded asynchronously. They are also the right ones :D. Minor cleanups.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,6 @@
     <FrameLayout android:id="@+id/login_panel"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
-                 tools:context="com.pij.crowdmix.LoginFragment"
         >
 
         <com.twitter.sdk.android.core.identity.TwitterLoginButton
@@ -25,16 +24,14 @@
 
     </FrameLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world"
+    <FrameLayout android:id="@+id/tweet_list"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
         />
-
-    <fragment android:id="@+id/fragment"
-              android:name="com.pij.crowdmix.TweetListFragment"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-        />
+    <!--<fragment android:id="@+id/fragment"-->
+    <!--android:name="com.pij.crowdmix.TweetListFragment"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--/>-->
 
 </LinearLayout>
