--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,14 +24,15 @@
 
     </FrameLayout>
 
+    <fragment android:id="@+id/tweet"
+              android:name="com.pij.crowdmix.TweetFragment"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+        />
+
     <FrameLayout android:id="@+id/tweet_list"
                  android:layout_width="match_parent"
-                 android:layout_height="match_parent"
+                 android:layout_height="wrap_content"
         />
-    <!--<fragment android:id="@+id/fragment"-->
-    <!--android:name="com.pij.crowdmix.TweetListFragment"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--/>-->
 
 </LinearLayout>
