--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
     </FrameLayout>
 
     <fragment android:id="@+id/tweet"
-              android:name="com.pij.crowdmix.TweetFragment"
+              android:name="com.pij.crowdmix.ui.TweetFragment"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
         />
